<resources>
    <string name="app_name">Midclan</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_create_account">Create an account?</string>
    <string name="action_have_account">Have an account?</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_try_again">Try again</string>
    <string name="action_retry">Retry</string>
    <string name="action_continue">Continue</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_previous">Previous</string>
    <string name="action_get">Get</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="text_create_account">Create account</string>
    <string name="text_create_account_step_1_hint">I want to join as a</string>
    <string name="text_field_username">Username</string>
    <string name="text_field_password">Password</string>
    <string name="text_field_confirm_password">Confirm password</string>
    <string name="text_field_email">Email</string>
    <string name="text_field_first_name">First Name</string>
    <string name="text_field_last_name">Last Name</string>
    <string name="text_field_mobile_no">Phone</string>
    <string name="text_field_user_family">Family</string>
    <string name="text_field_user_dob">Date of Birth</string>
    <string name="text_field_user_blood_group">Blood group</string>
    <string name="text_field_user_genotype">Genotype</string>
    <string name="text_field_user_bio_data">Bio data</string>
    <string name="text_field_user_soo">State of origin</string>
    <string name="text_field_user_lga">Local government</string>
    <string name="text_field_user_college_of_study">College of study</string>
    <string name="text_field_user_university">University</string>
    <string name="text_field_user_alma_mata">Alma mata</string>
    <string name="text_field_hint_send_comment">Type comment</string>
    <string name="text_field_hint_send_message">Type a message</string>
    <string name="text_field_user_referees_contacts">Referees and Contact</string>
    <string name="text_sign_in_with">Sign in with</string>
    <string name="text_register_with">Register with</string>
    <string name="text_no_message">No Messages yet</string>
    <string name="text_comments">Comments</string>
    <string name="text_no_message_hint">Try typing a message to start up a conversation</string>
    <string name="text_network_not_available">No Internet Connection</string>
    <string name="text_network_not_available_hint">Seems you dropped off the radar there!!!</string>
    <string name="text_profile_edit_profile">Edit profile</string>
    <string name="text_profile_edit_profile_hint">Change username, password, name, email etc.</string>
    <string name="text_profile_bookmark">Bookmarks</string>
    <string name="text_profile_bookmark_hint">Saved posts and videos</string>
    <string name="text_profile_log_out">Log_out</string>
    <string name="text_profile_privacy_policy">Privacy Policy</string>
    <string name="text_profile_subscriptions">Subscriptions</string>
    <string name="text_profile_subscriptions_hint">Update or check your subscriptions</string>
    <string name="text_profile_about">About</string>
    <string name="text_profile_about_hint">About MidClan, Privacy Policy, Version etc.</string>
    <string name="text_subscription_features">Features</string>
    <string name="text_subscription_user_feature_free">Free</string>
    <string name="text_subscription_user_feature_free_1">1 doctor</string>
    <string name="text_subscription_user_feature_free_2">1 pharmacist</string>
    <string name="text_subscription_user_feature_free_3">1 nurse</string>
    <string name="text_subscription_user_feature_intermediate">Intermediate</string>
    <string name="text_subscription_user_feature_professional">Professional</string>
    <string name="text_discover_find_hospital">Hospital near you</string>
    <string name="text_discover_drugs">Shop for Medication</string>
    <string name="text_discover_doctor">Doctors near you</string>
    <string name="text_discover_doctor_medical_cases">Medical cases</string>
    <string name="text_discover_doctor_patient_list">Patient list</string>
    <string name="text_discover_insurance">Insurance</string>
    <string name="text_discover_lab_near_you">Lab near you</string>
    <string name="text_discover_pharmacy">Pharmacy near you</string>
    <string name="text_discover_medical_aid">Medical Aid</string>
    <string name="text_discover_shop_medical_equipment">Shop Medical Equipment</string>
    <string name="nav_feeds">Timeline</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_chat_private_chat">Start Private Chat</string>
    <string name="nav_chat_public_chat">Start Public Chat</string>
    <string name="nav_chat_add_attachment">Add Attachment</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_create">Create</string>
    <string name="nav_notification">Notifications</string>
    <string name="nav_search">Search</string>
    <string name="users_patient">Patient</string>
    <string name="users_nurse">Nurse</string>
    <string name="users_doctor">Doctor</string>
    <string name="users_hospital">Hospital</string>
    <string name="users_lab_technician">Lab technician</string>
    <string name="users_pharmacist">Pharmacist</string>
    <string name="address_user">Address</string>
    <string name="user_state">State</string>
    <string name="user_country">Country</string>
    <string name="user_date_of_birth">Date of Birth</string>
    <string name="user_gender">Gender</string>
    <string name="base_url_sign_up">https://midclan-webapi.herokuapp.com/api/v1/auth/signup/</string>
    <string name="base_url_sign_in">https://midclan-webapi.herokuapp.com/api/v1/auth/login/</string>
    <string name="base_url">https://midclan-webapi.herokuapp.com/api/v1/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="dummy_title">Check out the rest of the DesignBetter.co library</string>
    <string name="dummy_text">The social network’s popularity, but they never actually did
anything meaningful with the integration. The product team
changed course once the qualitative findings clarified the
motivations behind the customer behavior</string>
    <string name="title_activity_notification">Notifications</string>

    <string name="long_lorem_ipsum">
        Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod. Praesent sem nisl, facilisis eget odio at, rhoncus scelerisque ipsum. Nulla orci dui, dignissim a risus ut, lobortis porttitor velit.
        \n\nNulla id lectus metus. Maecenas a lorem in odio auctor facilisis non vitae nunc. Sed malesuada volutpat massa. Praesent sit amet lacinia augue, mollis tempor dolor.
    </string>
    <string name="write_title">Write title</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="write_description">Write description</string>

</resources>
