<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_feeds"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_feeds" />

    <item
        android:id="@+id/nav_discover"
        android:icon="@drawable/ic_nav_search"
        android:title="@string/nav_discover" />

    <item
        android:id="@+id/nav_create"
        android:icon="@drawable/ic_plus_circle_outline"
        android:title="@string/nav_create" />

    <item
        android:id="@+id/nav_chats"
        android:icon="@drawable/ic_nav_message"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile"/>

</menu>
